*Version 3.3.2*
* Maximum file upload size configurable via env property web.fileUpload.maxSize

*Version 3.3.1*
* Removing superadmin duplicate permission text box on legacy system settings page
* Adding validation so users know its not possible to change the read only superadmin permission
* Fixing initializeHistorical to set DataPointRT's pointValue and interval appropriately
* Enable using websockets with JWT token authentication
* Fix RQL queries which do in-memory compare against enums
* Fix default date/time format for REST API
* Adding Interval Log On Change logging type for data points, ensure you update the MangoApi module to 3.3.3
* Fix for broken SQL point value bookend query to now return null data value for first values before query time if none exists
* Fix for broken SQL point value bookend query to return bookends in time order of query
* Using bookend query to improve visuals of JFree chart on Legacy Data Point Details page.
* Improved accuracy of writes per second for SQL Point Value databases
* Fixed JsonEmport script utility always had admin privilege
* Offer default script permissions to event handlers
* Fix bug in text email template for data point events
* Fix bug in EventInstanceWrapper for getReferenceId2() returning reference id 1
* Exposed EventType in EventInstanceWrapper under getEventTypeObject()
* Optionally, escalation emails for non-Do-not-log email event handlers will resend the escalation email every escalation period if active and unacknowledged.
* EventDao::get returns null instead of throws exception if no event exists
* Improved synchronization in real-time task subsystem to ensure tasks are not lost
* Purged values removed from the point's value cache
* Reduce log output for REST Exceptions that are passed back in the response
* Changing audit log messages to the format User {username} created|changed|deleted|toggled {vo type} - {vo.name} with xid {vo.xid}

*Version 3.3.0*