@@ -175,9 +175,7 @@ timezone=
 
 #Rest API Configuration
 rest.enabled=true
-#For using other than timestamp
-rest.customDateOutputFormat=yyyy-MM-dd'T'HH:mm:ss.SSSXXX
-rest.customDateInputFormat=yyyy-MM-dd'T'HH:mm:ss.SSSXXX
+
 #Enable to make JSON More readable
 rest.indentJSON=false
 #Cross Origin Request Handling
