@@ -1,5 +1,6 @@
 *Version 3.3.2*
 * Maximum file upload size configurable via env property web.fileUpload.maxSize
+* Removed rest.customDateOutputFormat and rest.customDateInputFormat env properties, REST dates are always ISO 8601 format now
 
 *Version 3.3.1*
 * Removing superadmin duplicate permission text box on legacy system settings page
